# algo_dll

./: .gitignore  .hadolint.yaml  Makefile  README.md  pyproject.toml  setup.cfg
algo_dll/: __init__.py  exceptions.py  manager.py  manager_by_id_mixin.py  nodes.py  partial_manager.py
src/: manager.py  manager_by_id_mixin.py  partial_manager.py
tests/: conftest.py  fixtures.py
tests/test_manger/: test_manger_mixin_move_node_by_id.py  test_manger_mixin_remove_node_by_id.py  test_manger_move_node.py  test_manger_remove_node.py  test_manger_set_node.py
tests/test_partial_manager/: test_partial_manager_move_node.py
